--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body class="fade-in">
 		<header id="header-center">
 			<p>AmericanLife RolePlay</p>
+			<p>Haloweeni event</p>
 		</header>
 	
 		<style>
